@@ -28,7 +28,7 @@ class Ingo_Storage_Whitelist extends Ingo_Storage_Rule
      * @return boolean  True on success.
      * @throws Ingo_Exception
      */
-    public function setWhitelist($data, $sort = true)
+    public function setWhitelist($data, $sort = false)
     {
         $addr = array_filter($this->_addressList($data, $sort), array('Ingo', 'filterEmptyAddress'));
         if (!empty($GLOBALS['conf']['storage']['maxwhitelist'])) {
